# DLC2NWB

./: .gitignore  LICENSE  README.md  reinstall.sh  setup.cfg  setup.py
dlc2nwb/: __init__.py  utils.py  version.py
examples/: README.md  config.yaml  example.py  m3v1mp4DLC_resnet50_openfieldAug20shuffle1_30000.nwb
tests/: test_utils.py
