[metadata]
name = DLC2NWB
version = 0.2
author = DeepLabCut team
author_email = admin@deeplabcut.org
description = DeepLabCut<->NWB conversion utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeepLabCut/DLC2NWB
project_urls =
    Bug Tracker = https://github.com/DeepLabCut/DLC2NWB/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires =
    ndx-pose
    pynwb
    numpy
    pandas
    opencv-python
    hdmf
    ruamel.yaml
    pyyaml
[options.extras_require]
test = 
    pytest
    deeplabcut>=2.2.0.2
